# TestBuildDesktopFP

./: .gitignore  README.md  app.py  pyproject.toml
assets/images/: on_off.json  wifi_radar.json
src/constants/: constants.py
src/database/: databases.py
src/network/: API.py  model.py
src/ui/login/: login_page.py  login_viewmodel.py
