[tool.poetry]
name = "deconz-desktop-app"
version = "0.1.0"
description = ""
authors = ["james.li <leasual@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.5.0"
requests = "^2.28.2"
asyncio = "^3.4.3"
peewee = "^3.16.0"
pyinstaller = [
    {version = "^5.9.0", python = ">=3.11,<3.12"}
]
pydantic = "^1.10.7"
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
